<resources>
    <string name="app_name">DavaChat5</string>
    <string name="logo_du_fcip_gip">logo du fcip-gip</string>

    <string name="DashBoard">Tableau de bord</string>

    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="quitter">Quitter</string>
    <string name="profil">Profil</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="qrcode">QRCode</string>
    <string name="signature">Signature</string>
    <string name="effacer">Effacer</string>


    <string name="civilite">Civilité : </string>
    <string name="monsieur">Monsieur </string>
    <string name="madame">Madame </string>
    <string name="nom_de_naissance">Nom de naissance</string>
    <string name="nom_d_usage">Nom d\'usage</string>
    <string name="prenom">Prénom</string>
    <string name="num_tel">Numéro de téléphone</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="valider">Valider</string>
    <string name="cle_bleu">Cle bleu</string>
    <string name="mot_de_passe_confirmer">Mot de passe (confirmer)</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>

    <string name="connection_succeed">Authentification réussie !</string>
    <string name="error_no_internet">Absence de connexion internet</string>
    <string name="error_unknown_error">Erreur inconnnue</string>
    <string name="error_authentication_canceled">"Echec de l'authentification "</string>
    <string name="document">Document</string>
    <string name="options">Options</string>
    <string name="chat">Salon de discussion</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>
