<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

        <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_chat"
                    android:icon="@drawable/icon_menu_chat"
                    android:title="@string/chat" />

                <item
                    android:id="@+id/action_document"
                    android:icon="@drawable/icon_menu_document"
                    android:title="@string/document"
                    android:iconTint="@color/black"/>

                <item
                    android:id="@+id/action_option"
                    android:title="@string/options" />

                <item
                    android:id="@+id/action_quitter"
                    android:title="@string/quitter" />
        </group>

</menu>