<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dashboard_coordinator"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view_menu"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="240sp"
                    android:background="@drawable/logo_gipfcip_v">
                </ImageView>

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:background="@color/colorPrimary"
                    android:textAlignment="center"
                    android:text="@string/DashBoard"
                    android:textSize="30sp"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_marginTop="2sp"
                    >

                    <LinearLayout
                        android:id="@+id/acceuil_bouton_profil"
                        android:layout_width="0dp"
                        android:layout_height="120sp"
                        android:layout_weight="1"
                        android:layout_margin="2sp"
                        android:orientation="vertical"

                        >

                        <ImageView
                            android:layout_width="50sp"
                            android:layout_height="50sp"
                            android:layout_marginTop="10sp"
                            android:layout_gravity="center"
                            android:src="@drawable/profil"

                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="8sp"
                            android:layout_marginTop="20sp"
                            android:background="@color/orange"
                            android:text="@string/profil"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            />



                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/acceuil_bouton_chat"
                        android:layout_width="0dp"
                        android:layout_height="120sp"
                        android:layout_weight="1"
                        android:layout_margin="2sp"
                        android:orientation="vertical"
                        android:onClick="onClickPDF"
                        >

                        <ImageView
                            android:layout_width="50sp"
                            android:layout_height="50sp"
                            android:layout_marginTop="20sp"
                            android:layout_gravity="center"
                            android:src="@drawable/chat"

                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="8sp"
                            android:layout_marginTop="10sp"
                            android:background="@color/orange"
                            android:text="Chat"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/acceuil_bouton_qrc"
                        android:layout_width="0dp"
                        android:layout_height="120sp"
                        android:layout_weight="1"
                        android:layout_margin="2sp"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:layout_width="50sp"
                            android:layout_height="50sp"
                            android:layout_marginTop="10sp"
                            android:layout_gravity="center"
                            android:src="@drawable/qrcode"

                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="8sp"
                            android:layout_marginTop="20sp"
                            android:background="@color/red"
                            android:text="@string/qrcode"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            />



                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/acceuil_bouton_signature"
                        android:layout_width="0dp"
                        android:layout_height="120sp"
                        android:layout_weight="1"
                        android:layout_margin="2sp"
                        android:orientation="vertical"
                        android:onClick="onClickSignature">

                        <ImageView
                            android:layout_width="50sp"
                            android:layout_height="50sp"
                            android:layout_marginTop="20sp"
                            android:layout_gravity="center"
                            android:src="@drawable/document"

                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="8sp"
                            android:layout_marginTop="10sp"
                            android:background="@color/red"
                            android:text="Signature"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/acceuil_bouton_deconnexion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/deconnexion"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginHorizontal="40sp"
                    />



            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

